<resources>
    <string name="app_name">SherlockHolmes</string>
    <string name="Welcome">221B Baker Street Boys are Here</string>
    <string name="Username">Enter Username</string>
    <string name="Password">Enter Password</string>
    <string name="Login">Login</string>
    <string name="History">History of Events</string>
    <string name="Clear">Clear History</string>
    <string name="WrongPassword">Enter Correct Password</string>
    <string name="Make_Call">Call Police</string>
    <string name="textView">Text</string>
</resources>
